separators double border fix

--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ body {
     content: "";
     width: 100%;
     height: 0;
-    border: 1px solid #000000;
+    border-top: 1px solid #000000;
 }
 .dividing-heading::before { top: 0; }
 .dividing-heading::after { bottom: 0; }
